--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,7 @@ $green: #5fb759;
 
 ::selection {
     background-color: $green;
+    color: #ffffff;
 }
 
 html {
@@ -32,8 +33,10 @@ body {
     &::-webkit-scrollbar {
         width: 12px;
     }
+
     &::-webkit-scrollbar-thumb {
         background-color: #464646;
+
         &:hover {
             background-color: #777777;
         }
@@ -65,6 +68,7 @@ header {
     &.change-active {
         background-color: #2e555c;
         height: 70px;
+
         .header__navbar {
             height: 70px;
         }
@@ -89,8 +93,10 @@ header {
         .nav-links {
             display: flex;
             align-items: center;
+
             ul {
                 display: flex;
+
                 li {
                     a {
                         position: relative;
@@ -109,6 +115,7 @@ header {
                             background-color: #ffffff;
                             transition: 0.2s ease;
                         }
+
                         &:hover {
                             color: #7dcc78;
 
@@ -123,6 +130,7 @@ header {
             .search_btn {
                 margin-left: 15px;
                 position: relative;
+
                 input {
                     width: 0;
                     height: 30px;
@@ -180,9 +188,11 @@ header {
             &.closeBtn .bar1 {
                 transform: rotate(45deg) translate(5px, 6px);
             }
+
             &.closeBtn .bar2 {
                 transform: translateX(150%);
             }
+
             &.closeBtn .bar3 {
                 transform: rotate(-45deg) translate(6px, -6px);
             }
@@ -213,7 +223,7 @@ header {
                         font-size: 15px;
                         transition: 0.2s ease;
 
-                        &:hover{
+                        &:hover {
                             padding-left: 10px;
                             color: $green;
                         }
@@ -221,22 +231,24 @@ header {
                 }
             }
 
-            .search_btn{
+            .search_btn {
                 position: relative;
                 max-width: 200px;
                 margin-top: 30px;
-                input{
+
+                input {
                     width: 100%;
                     height: 30px;
                     padding: 0 10px;
                     border: none;
                     border-radius: 5px;
                 }
-                button{
+
+                button {
                     position: absolute;
                     top: 0;
                     right: -15px;
-                    padding: 7px 12px;
+                    padding: 8px 12px;
                     background: $green;
                     color: #ffffff;
                     border-radius: 5px;
@@ -244,7 +256,7 @@ header {
                     border: none;
                     transition: .2s ease;
 
-                    &:hover{
+                    &:hover {
                         background-color: #538850;
                     }
                 }
@@ -252,18 +264,22 @@ header {
         }
     }
 }
+
 .header__content {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 60vh;
+    min-height: 60vh;
+
     .header__titles {
+        margin-top: 100px;
         .header_title {
             margin-top: 30px;
             font-size: 18px;
             color: #ffffff;
         }
+
         .title2 {
             font-size: 40px;
         }
@@ -272,6 +288,7 @@ header {
             margin-top: 60px;
             display: flex;
             justify-content: center;
+
             button {
                 padding: 10px 20px;
                 font-size: 15px;
@@ -282,6 +299,7 @@ header {
                 color: $green;
                 cursor: pointer;
                 transition: 0.2s ease;
+
                 &:hover {
                     background-color: $green;
                     color: #ffffff;
@@ -292,6 +310,7 @@ header {
                     border: 2px solid #ffffff;
                     color: #ffffff;
                     transition: 0.2s ease;
+
                     &:hover {
                         background-color: #ffffff;
                         color: $green;
@@ -313,6 +332,7 @@ header {
         position: fixed;
         top: 88%;
     }
+
     a {
         background-color: #2e555c;
         color: #ffffff;
@@ -320,6 +340,7 @@ header {
         padding: 10px 14px;
         border-radius: 5px;
         transition: 0.2s ease;
+
         &:hover {
             background-color: #16292c;
         }
@@ -327,20 +348,24 @@ header {
 }
 
 .about__section {
-    margin-top: 90px;
+    padding-top: 90px;
 }
+
 .about__items {
     display: flex;
     justify-content: space-between;
     padding: 0 0 70px 0;
     border-bottom: 3px solid #d4d4d4;
+
     .work__item {
         max-width: 500px;
         min-width: 350px;
+
         .small__title {
             font-size: 15px;
             color: $green;
         }
+
         .work__title {
             font-size: 32px;
             font-weight: 800;
@@ -352,10 +377,12 @@ header {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-gap: 50px 0;
+
             .image_item {
                 display: flex;
                 align-items: center;
             }
+
             p {
                 margin-left: 10px;
                 font-weight: 600;
@@ -364,6 +391,7 @@ header {
 
         .work__btn {
             margin-top: 40px;
+
             button {
                 padding: 10px 15px;
                 border: none;
@@ -380,8 +408,10 @@ header {
                     font-size: 14px;
                     transition: 0.2s ease;
                 }
+
                 &:hover {
                     background-color: #538850;
+
                     .right_arrw {
                         padding-left: 13px;
                     }
@@ -392,15 +422,18 @@ header {
 
     .text__item {
         max-width: 600px;
+
         p {
             margin-top: 40px;
             font-size: 17px;
             line-height: 27px;
             color: #777777;
         }
+
         .work__btn {
             margin-top: 20px;
             display: none;
+
             button {
                 padding: 10px 15px;
                 border: none;
@@ -417,8 +450,10 @@ header {
                     font-size: 14px;
                     transition: 0.2s ease;
                 }
+
                 &:hover {
                     background-color: #538850;
+
                     .right_arrw {
                         padding-left: 13px;
                     }
@@ -433,21 +468,26 @@ header {
     display: flex;
     justify-content: space-between;
     gap: 20px;
+
     .feature_block {
         max-width: 350px;
+
         .img__block {
             display: flex;
             align-items: center;
+
             p {
                 margin-left: 13px;
                 font-weight: 600;
             }
         }
+
         .block_text {
             margin-top: 30px;
             line-height: 24px;
             font-size: 17px;
         }
+
         .block__btn {
             margin-top: 30px;
 
@@ -459,12 +499,15 @@ header {
                 color: #000000;
                 cursor: pointer;
                 transition: 0.2s ease;
+
                 .right_arrw {
                     padding-left: 7px;
                     transition: 0.2s ease;
                 }
+
                 &:hover {
                     color: $green;
+
                     .right_arrw {
                         padding-left: 13px;
                     }
@@ -482,6 +525,7 @@ header {
     background-attachment: fixed;
     margin-top: 90px;
 }
+
 .subscribe__item {
     padding: 50px 0;
     text-align: center;
@@ -493,9 +537,11 @@ header {
         color: #ffffff;
         letter-spacing: 0.5px;
     }
+
     .title-1 {
         font-size: 17px;
     }
+
     .title-2 {
         margin-top: 30px;
         font-size: 30px;
@@ -512,6 +558,7 @@ header {
         margin-top: 50px;
         display: flex;
         justify-content: center;
+
         input {
             width: 100%;
             padding: 0 15px;
@@ -522,17 +569,21 @@ header {
             background: none;
             color: #ffffff;
             border: 1px solid #ffffff;
+
             &::placeholder {
                 color: #ffffff;
                 transition: 0.2s ease;
             }
+
             &:focus {
                 border: 1px solid $green;
+
                 &::placeholder {
                     font-size: 14px;
                 }
             }
         }
+
         .subs_btn {
             margin-left: 15px;
             border: none;
@@ -545,6 +596,7 @@ header {
             font-weight: 600;
             background-color: #ffffff;
             transition: 0.2s ease;
+
             &:hover {
                 background-color: $green;
                 color: #ffffff;
@@ -554,7 +606,7 @@ header {
 }
 
 .projects__section {
-    margin-top: 100px;
+    padding-top: 100px;
 
     .projects_title {
         font-size: 15px;
@@ -567,8 +619,10 @@ header {
     display: flex;
     justify-content: space-between;
 }
+
 .projects__links_item {
     max-width: 240px;
+
     .projects_links_title {
         font-size: 32px;
         color: #000000;
@@ -576,6 +630,7 @@ header {
 
     .projects__links {
         margin-top: 100px;
+
         ul {
             li {
                 a {
@@ -585,6 +640,7 @@ header {
                     padding: 7px 0;
                     color: #9a9a9a;
                     transition: 0.2s ease;
+
                     &:hover {
                         padding-left: 7px;
                         color: $green;
@@ -594,6 +650,7 @@ header {
         }
     }
 }
+
 .projects__images_item {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -610,6 +667,7 @@ header {
             height: 100%;
             border-radius: 5px;
             transition: 0.3s ease;
+
             &:hover {
                 transform: scale(1.1);
                 opacity: 0.9;
@@ -619,25 +677,29 @@ header {
 }
 
 .team__section {
-    background-image: url("../images/team__image.jpg");
+    background-image: url("/images/team__image.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     margin-top: 90px;
     padding: 100px 0;
+
     .team__title {
         text-align: center;
         color: #ffffff;
     }
+
     .title-1 {
         font-size: 15px;
     }
+
     .title-2 {
         font-size: 32px;
         margin-top: 27px;
     }
 }
+
 .team__members {
     margin-top: 60px;
     display: flex;
@@ -647,6 +709,7 @@ header {
     .team_member {
         max-width: 370px;
     }
+
     .member__image {
         position: relative;
         overflow: hidden;
@@ -684,6 +747,7 @@ header {
                 }
             }
         }
+
         &:hover {
             .social__icons {
                 position: absolute;
@@ -700,6 +764,7 @@ header {
         margin-top: 25px;
         letter-spacing: 0.5px;
     }
+
     .profession {
         font-size: 14px;
         margin-top: 10px;
@@ -711,8 +776,9 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    margin-top: 100px;
+    padding-top: 100px;
 }
+
 .contact__items {
     display: flex;
     justify-content: space-between;
@@ -721,9 +787,11 @@ header {
     .title__item {
         margin-top: 25px;
         max-width: 300px;
+
         .contact_title {
             color: $green;
         }
+
         .contact_lists__container {
             .title-2 {
                 color: #000000;
@@ -733,10 +801,12 @@ header {
 
             .contact_lists {
                 margin-top: 60px;
+
                 .list {
                     display: flex;
                     align-items: center;
                     margin-top: 20px;
+
                     p {
                         margin-left: 15px;
                         font-size: 16px;
@@ -749,6 +819,7 @@ header {
 
     .contact__inputs {
         max-width: 350px;
+
         input {
             width: 100%;
             height: 35px;
@@ -758,11 +829,13 @@ header {
             transition: 0.2s ease;
             margin: 15px 0;
             background: none;
+
             &:focus {
                 padding: 0 8px;
                 border-bottom: 1px solid $green;
             }
         }
+
         .message {
             max-width: 400px;
 
@@ -777,11 +850,13 @@ header {
                 border: none;
                 border: 1px solid #464646;
                 transition: 0.2s ease;
+
                 &:focus {
                     border: 1px solid $green;
                 }
             }
         }
+
         .contact_btn {
             margin-top: 10px;
             padding: 10px 15px;
@@ -799,8 +874,10 @@ header {
                 font-size: 14px;
                 transition: 0.2s ease;
             }
+
             &:hover {
                 background-color: #538850;
+
                 .right_arrw {
                     padding-left: 13px;
                 }
@@ -814,6 +891,7 @@ header {
     padding: 80px 0;
     margin-top: 120px;
 }
+
 .footer__item {
     display: flex;
     justify-content: space-between;
@@ -826,6 +904,7 @@ header {
         a {
             color: #ffffff;
             font-size: 16px;
+
             &:hover {
                 border-bottom: 1px solid #ffffff;
             }
@@ -835,14 +914,17 @@ header {
     .social_pages {
         display: flex;
         align-items: center;
+
         p {
             color: #ffffff;
             font-weight: 500;
             font-size: 14px;
         }
+
         .social__icons {
             margin-left: 5px;
             display: flex;
+
             a {
                 font-size: 20px;
                 color: #68cc98;
@@ -866,238 +948,5 @@ header {
     }
 }
 
-/* ---------- media inquiries for responsive ---------- */
-
-@media screen and (max-width: 1220px) {
-}
-
-@media screen and (max-width: 892px) {
-    .header__section {
-        .header__navbar {
-            .burger {
-                display: block;
-            }
-            .nav-links {
-                display: none;
-            }
-        }
-    }
-
-    .feature__blocks {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 30px 5px;
-    }
-
-    .projects__items {
-        flex-direction: column;
-
-        .projects__links_item {
-            display: flex;
-            justify-content: space-between;
-            max-width: 750px;
-            .projects__links {
-                margin-top: 0;
-                width: 150px;
-                ul {
-                    li {
-                        a {
-                            padding: 6px 0;
-                            &:hover {
-                                padding-left: 7px;
-                            }
-                        }
-                    }
-                }
-            }
-            .projects_links_title {
-                max-width: 250px;
-            }
-        }
-    }
-    .projects__images_item {
-        margin-top: 50px;
-    }
-
-    .team__members {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 30px 10px;
-    }
-}
-
-@media screen and (max-width: 820px) {
-    .footer__item {
-        flex-direction: column;
-        row-gap: 30px;
-        .social_pages {
-            flex-direction: column;
-            row-gap: 20px;
-        }
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .about__items {
-        flex-direction: column;
-        .work__item {
-            .work__btn {
-                display: none;
-            }
-        }
-        .text__item {
-            .work__btn {
-                display: block;
-            }
-        }
-    }
-}
-
-@media screen and (max-width: 630px) {
-    .feature__blocks {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        justify-items: center;
-        grid-gap: 30px 0;
-    }
-
-    .subscribe__section {
-        padding-bottom: 30px;
-    }
-    .subscribe__item {
-        .subs_input {
-            position: relative;
-            height: 40px;
-            .subs_btn {
-                position: absolute;
-                top: 50px;
-                width: 200px;
-                height: 40px;
-            }
-        }
-    }
-
-    .projects__images_item {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .contact__items {
-        flex-direction: column;
-        .title__item {
-            max-width: 100%;
-            .contact_lists__container {
-                display: flex;
-                justify-content: space-between;
-                gap: 10px;
-                .contact_lists {
-                    margin-top: 0;
-                }
-            }
-        }
-        .contact__inputs {
-            max-width: 100%;
-            margin: 0 auto;
-        }
-    }
-}
-
-@media screen and (max-width: 520px) {
-    .projects__links_item {
-        flex-direction: column;
-        row-gap: 20px;
-        max-width: 750px;
-    }
-    .projects__images_item {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        .projects__image_block {
-            max-width: 100%;
-        }
-    }
-
-    .team__members {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 30px 10px;
-        .team_member {
-            max-width: 100%;
-        }
-    }
-
-    .contact__items {
-        row-gap: 30px;
-        .title__item {
-            max-width: 100%;
-            .contact_lists__container {
-                flex-direction: column;
-                .contact_lists {
-                    margin-top: 0;
-                }
-            }
-        }
-        .contact__inputs {
-            max-width: 100%;
-            margin: 0 auto;
-        }
-    }
-}
-
-@media screen and (max-width: 420px) {
-    .header__content {
-        .header__titles {
-            .header__btns {
-                flex-direction: column;
-                max-width: 200px;
-                margin: 25px auto;
-                row-gap: 10px;
-            }
-        }
-    }
-
-    .about__items {
-        .work__item {
-            min-width: 100%;
-            .work__images {
-                display: grid;
-                grid-template-columns: repeat(1, 1fr);
-                grid-gap: 15px 0;
-            }
-        }
-    }
-}
-
-@media screen and (max-width: 340px) {
-    .about__items {
-        .work__item {
-            .work__title {
-                font-size: 25px;
-            }
-        }
-    }
-
-    .team__section {
-        .title-2 {
-            font-size: 25px;
-        }
-    }
-
-    .header__content {
-        .header__titles {
-            .title2 {
-                font-size: 35px;
-            }
-        }
-    }
-}
-
-@media screen and (min-width: 893px) {
-    .header__section {
-        .header__navbar {
-            .navside {
-                position: absolute;
-                right: -110%;
-            }
-        }
-    }
-}
+// media queries
+@import "./media";
