--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -677,7 +677,7 @@ header {
 }
 
 .team__section {
-    background-image: url("/images/team__image.jpg");
+    background-image: url("../images/team__image.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
